# factory_pattern

./: CMakeLists.txt  main.cpp  plane.cpp  plane.hpp  ship.cpp  ship.hpp  truck.cpp  truck.hpp  vehicle.hpp  vehicle_factory.cpp  vehicle_factory.hpp
